wrap sections in about, media, reviews and contact pages in main element

--- a/about.html
+++ b/about.html
@@ -43,49 +43,50 @@
                 whether it's your college ball or your Grandma's birthday party.</p>
         </div>
     </header>
-    <section id="about-body">
-        <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
-        <h3>Meet the band.</h3>
-        <div class="about-bio-left about-bio">
-            <h3>Hannah Forster</h3>
-            <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
-            <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster (the lead singer of the band)" class="bio-pic-right">
-        </div>
-        <hr>
-        <div class="about-bio-right about-bio">
-            <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
-            <h3>Andy 'Silky' Silk</h3>
-            <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
-        </div>
-        <hr>
-        <div class="about-bio-left about-bio">
-            <h3>Joe Crossley</h3>
-            <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
-            <img src="assets/images/sitephotos/Joe2019v2.jpg" alt="A profile picture of Joe playing the electric guitar at one of the band's gigs" class="bio-pic-right">
-        </div>
-        <hr>
-        <div class="about-bio-right about-bio">
-            <img src="assets/images/sitephotos/Harrybass2018.jpg" alt="A profile picture of Harry playing the bass guitar at one of the band's gigs" class="bio-pic-left">
-            <h3>Harry Wilkinson</h3>
-            <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
-        </div>
-        <hr>
-        <div class="about-bio-left about-bio">
-            <h3>Ben DeGaris (Deej)</h3>
-            <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
-            <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band)" class="bio-pic-right">
-        </div>
-        <hr>
-        <div class="about-bio-right about-bio">
-            <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
-            <h3>The Brass Section</h3>
-            <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
-        </div>
-
-    </section>
-    <section id="book-now">
-        <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
-    </section>
+    <main>
+        <section id="about-body">
+            <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
+            <h3>Meet the band.</h3>
+            <div class="about-bio-left about-bio">
+                <h3>Hannah Forster</h3>
+                <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
+                <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster (the lead singer of the band)" class="bio-pic-right">
+            </div>
+            <hr>
+            <div class="about-bio-right about-bio">
+                <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
+                <h3>Andy 'Silky' Silk</h3>
+                <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
+            </div>
+            <hr>
+            <div class="about-bio-left about-bio">
+                <h3>Joe Crossley</h3>
+                <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
+                <img src="assets/images/sitephotos/Joe2019v2.jpg" alt="A profile picture of Joe playing the electric guitar at one of the band's gigs" class="bio-pic-right">
+            </div>
+            <hr>
+            <div class="about-bio-right about-bio">
+                <img src="assets/images/sitephotos/Harrybass2018.jpg" alt="A profile picture of Harry playing the bass guitar at one of the band's gigs" class="bio-pic-left">
+                <h3>Harry Wilkinson</h3>
+                <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
+            </div>
+            <hr>
+            <div class="about-bio-left about-bio">
+                <h3>Ben DeGaris (Deej)</h3>
+                <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
+                <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band)" class="bio-pic-right">
+            </div>
+            <hr>
+            <div class="about-bio-right about-bio">
+                <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
+                <h3>The Brass Section</h3>
+                <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
+            </div>
+        </section>
+        <section id="book-now">
+            <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
+        </section>
+    </main>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
