--- a/contact.html
+++ b/contact.html
@@ -33,6 +33,9 @@
         </ul>
         <hr>
     </nav>
+    <main>
+
+    </main>
     <footer>
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
@@ -44,7 +47,6 @@
             </li>
         </ul>
     </footer>
-
     <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
 </body>
 </html>
