add form labels and inputs to contact html file. move readme screenshots to new directory

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,23 @@
     </header>
     <main>
         <section id="contact-form">
-            <form action=""></form>
+            <form action="">
+                <label for="fname">First Name:</label><br>
+                <input type="text" name="fname" id="fname" value="first-name" required><br>
+                <label for="lname">Last Name:</label><br>
+                <input type="text" name="lname" id="lname" value="last-name" required><br>
+                <label for="email">Email Address:</label><br>
+                <input type="email" name="email" id="email" value="email-address" required><br>
+                <label for="set-length">Length of set required:</label><br>
+                <input type="radio" name="set-length" id="30min" value="30minutes">
+                <label for="30min">30 Minutes</label>
+                <input type="radio" name="set-length" id="30min" value="30minutes">
+                <label for="30min">45 Minutes</label>
+                <input type="radio" name="set-length" id="30min" value="30minutes">
+                <label for="30min">60 Minutes</label><br>
+                <input type="text">
+
+            </form>
         </section>
     </main>
     <!--Social links-->
