fix mistakes in radio button id and label for attributes, add textarea element to form

--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
                 <label for="set-length">Length of set required:</label><br>
                 <input type="radio" name="set-length" id="30min" value="30minutes">
                 <label for="30min">30 Minutes</label>
-                <input type="radio" name="set-length" id="30min" value="30minutes">
-                <label for="30min">45 Minutes</label>
-                <input type="radio" name="set-length" id="30min" value="30minutes">
-                <label for="30min">60 Minutes</label><br>
-                <input type="text">
+                <input type="radio" name="set-length" id="45min" value="45minutes">
+                <label for="45min">45 Minutes</label>
+                <input type="radio" name="set-length" id="60min" value="60minutes">
+                <label for="60min">60 Minutes</label><br>
+                <input type="textarea" placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..." required>
 
             </form>
         </section>
