--- a/contact.html
+++ b/contact.html
@@ -47,13 +47,13 @@
     </header>
     <main>
         <section id="contact-form">
-            <form action="">
+            <form action="" method="POST">
                 <label for="fname">First Name:</label><br>
-                <input type="text" name="fname" id="fname" value="first-name" required><br>
+                <input type="text" name="fname" id="fname" value="" placeholder="John/Jane" required><br>
                 <label for="lname">Last Name:</label><br>
-                <input type="text" name="lname" id="lname" value="last-name" required><br>
+                <input type="text" name="lname" id="lname" value="" placeholder="Doe" required><br>
                 <label for="email">Email Address:</label><br>
-                <input type="email" name="email" id="email" value="email-address" required><br>
+                <input type="email" name="email" id="email" value="" placeholder="hello@email.com" required><br>
                 <label for="set-length">Length of set required:</label><br>
                 <input type="radio" name="set-length" id="30min" value="30minutes">
                 <label for="30min">30 Minutes</label>
@@ -61,8 +61,10 @@
                 <label for="45min">45 Minutes</label>
                 <input type="radio" name="set-length" id="60min" value="60minutes">
                 <label for="60min">60 Minutes</label><br>
-                <input type="textarea" placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..." required>
-
+                <textarea name="more-info" id="more-info" cols="30" rows="10" required 
+                 placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..."></textarea><br>
+                <input type="submit" value="Submit">
+                <input type="reset" value="Reset">
             </form>
         </section>
     </main>
