add a required date input to contact form.

--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,8 @@
                 <input type="text" name="lname" id="lname" value="" placeholder="Doe" required><br>
                 <label for="email">Email Address:</label><br>
                 <input type="email" name="email" id="email" value="" placeholder="hello@email.com" required><br>
+                <label for="date">Date of Event:</label>
+                <input type="date" id="date" name="date" required><br>
                 <label for="set-length">Length of set required:</label><br>
                 <input type="radio" name="set-length" id="30min" value="30minutes">
                 <label for="30min">30 Minutes</label>
