--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <section id="contact-form">
-            <form action="thanks.html" method="POST">
+            <form action="thanks.html">
                 <label for="fname">First Name:</label><br>
                 <input type="text" name="fname" id="fname" value="" placeholder="John/Jane" required><br>
                 <label for="lname">Last Name:</label><br>
