--- a/thanks.html
+++ b/thanks.html
@@ -35,8 +35,10 @@
         <hr>
     </nav>
     <!--Thanks message-->
-
-
+    <main id="thanks message">
+        <h1>Thanks for your message.</h1>
+        <p>One of the band's members will be in contact via email within the next 5 business days.</p>
+    </main>
     <!--Social links-->
     <footer>
         <p><strong>Follow us on:</strong></p>
