add basic style to contact form, i.e position of elements and spacing

--- a/contact.html
+++ b/contact.html
@@ -58,15 +58,15 @@
                 <input type="date" id="date" name="date" required><br>
                 <label for="set-length">Length of set required:</label><br>
                 <input type="radio" name="set-length" id="30min" value="30minutes">
-                <label for="30min">30 Minutes</label>
+                <label for="30min">30 Minutes</label><br>
                 <input type="radio" name="set-length" id="45min" value="45minutes">
-                <label for="45min">45 Minutes</label>
+                <label for="45min">45 Minutes</label><br>
                 <input type="radio" name="set-length" id="60min" value="60minutes">
                 <label for="60min">60 Minutes</label><br>
                 <textarea name="more-info" id="more-info" cols="30" rows="10" required 
                  placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..."></textarea><br>
-                <input type="submit" value="Submit">
-                <input type="reset" value="Reset">
+                <input type="submit" id="submit" value="Submit">
+                <input type="reset" id="reset" value="Reset">
             </form>
         </section>
     </main>
