--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         </div>
         <div id="contact-header-underline"></div>
     </header>
-    <main>
+    <main id="contact-background">
         <section id="contact-form">
             <form action="thanks.html">
                 <label for="fname">First Name:</label><br>
@@ -54,7 +54,7 @@
                 <input type="text" name="lname" id="lname" value="" placeholder="Doe" required><br>
                 <label for="email">Email Address:</label><br>
                 <input type="email" name="email" id="email" value="" placeholder="hello@email.com" required><br>
-                <label for="date">Date of Event:</label>
+                <label for="date">Date of Event:</label><br>
                 <input type="date" id="date" name="date" required><br>
                 <label for="set-length">Length of set required:</label><br>
                 <input type="radio" name="set-length" id="30min" value="30minutes">
