--- a/contact.html
+++ b/contact.html
@@ -49,11 +49,11 @@
         <section id="contact-form">
             <form action="thanks.html">
                 <label for="fname">First Name:</label><br>
-                <input type="text" name="fname" id="fname" value="" placeholder="John/Jane" required><br>
+                <input type="text" name="fname" id="fname" value="" placeholder="e.g. John/Jane" required><br>
                 <label for="lname">Last Name:</label><br>
-                <input type="text" name="lname" id="lname" value="" placeholder="Doe" required><br>
+                <input type="text" name="lname" id="lname" value="" placeholder="e.g. Doe" required><br>
                 <label for="email">Email Address:</label><br>
-                <input type="email" name="email" id="email" value="" placeholder="hello@email.com" required><br>
+                <input type="email" name="email" id="email" value="" placeholder="e.g. hello@email.com" required><br>
                 <label for="date">Date of Event:</label><br>
                 <input type="date" id="date" name="date" required><br>
                 <label for="set-length">Length of set required:</label><br>
@@ -63,7 +63,7 @@
                 <label for="45min">45 Minutes</label><br>
                 <input type="radio" name="set-length" id="60min" value="60minutes">
                 <label for="60min">60 Minutes</label><br>
-                <textarea name="more-info" id="more-info" cols="30" rows="10" required 
+                <textarea name="more-info" id="more-info" cols="40" rows="10" required 
                  placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..."></textarea><br>
                 <input type="submit" id="submit" value="Submit">
                 <input type="reset" id="reset" value="Reset">
