alter html structure of hannah's about bio and reorder associated styles.

--- a/about.html
+++ b/about.html
@@ -50,10 +50,14 @@
         <section id="about-body">
             <img src="assets/images/sitephotos/wholebandjuneball2019.jpg" alt="A picture of the whole band in black tie at a disco event at Durham University." id="whole-band-pic">
             <h3>Meet the band.</h3>
-            <div class="about-bio-left about-bio">
-                <h3>Hannah Forster</h3>
-                <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
-                <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster (the lead singer of the band)" class="bio-pic-right">
+            <div class="about-bio">
+                <div class="about-bio-left bio-text">
+                    <h3>Hannah Forster</h3>
+                    <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
+                </div>
+                <div class="about-bio-right bio-pic">
+                    <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster (the lead singer of the band)" class="bio-pic-right">
+                </div>
             </div>
             <hr>
             <div class="about-bio-right about-bio">
