alter html structre of Andy's about bio to apply new style rules.

--- a/about.html
+++ b/about.html
@@ -60,10 +60,14 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio-right about-bio">
-                <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
-                <h3>Andy 'Silky' Silk</h3>
-                <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
+            <div class="about-bio">
+                <div class="about-bio-left bio-pic">
+                    <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
+                </div>
+                <div class="about-bio-right bio-text">
+                    <h3>Andy 'Silky' Silk</h3>
+                    <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
+                </div>
             </div>
             <hr>
             <div class="about-bio-left about-bio">
