alter html structire of Joe's about bio to apply new style rules.

--- a/about.html
+++ b/about.html
@@ -70,10 +70,14 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio-left about-bio">
-                <h3>Joe Crossley</h3>
-                <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
-                <img src="assets/images/sitephotos/Joe2019v2.jpg" alt="A profile picture of Joe playing the electric guitar at one of the band's gigs" class="bio-pic-right">
+            <div class="about-bio">
+                <div class="about-bio-left bio-text">
+                    <h3>Joe Crossley</h3>
+                    <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
+                </div>
+                <div class="about-bio-right bio-pic">
+                    <img src="assets/images/sitephotos/Joe2019v2.jpg" alt="A profile picture of Joe playing the electric guitar at one of the band's gigs" class="bio-pic-right">
+                </div>
             </div>
             <hr>
             <div class="about-bio-right about-bio">
