alter the html structure of Harry's bio to apply new styles.

--- a/about.html
+++ b/about.html
@@ -80,10 +80,14 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio-right about-bio">
-                <img src="assets/images/sitephotos/Harrybass2018.jpg" alt="A profile picture of Harry playing the bass guitar at one of the band's gigs" class="bio-pic-left">
-                <h3>Harry Wilkinson</h3>
-                <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
+            <div class="about-bio">
+                <div class="about-bio-left bio-pic">
+                    <img src="assets/images/sitephotos/Harrybass2018.jpg" alt="A profile picture of Harry playing the bass guitar at one of the band's gigs" class="bio-pic-left">
+                </div>
+                <div class="about-bio-right bio-text">
+                    <h3>Harry Wilkinson</h3>
+                    <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
+                </div>
             </div>
             <hr>
             <div class="about-bio-left about-bio">
