alter html structure for the Deej and brass section bio elements.

--- a/about.html
+++ b/about.html
@@ -90,16 +90,24 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio-left about-bio">
-                <h3>Ben DeGaris (Deej)</h3>
-                <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
-                <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band)" class="bio-pic-right">
+            <div class="about-bio">
+                <div class="about-bio-left bio-text">
+                    <h3>Ben DeGaris (Deej)</h3>
+                    <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
+                </div>
+                <div class="about-bio-right bio-pic">
+                    <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band)" class="bio-pic-right">
+                </div>
             </div>
             <hr>
-            <div class="about-bio-right about-bio">
-                <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
-                <h3>The Brass Section</h3>
-                <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
+            <div class="about-bio">
+                <div class="about-bio-left bio-pic">
+                    <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
+                </div>
+                <div class="about-bio-right bio-text">
+                    <h3>The Brass Section</h3>
+                    <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
+                </div>
             </div>
         </section>
         <!--A call to action/link to the contact page-->
