add background images to the about and media nav cards, homepage.

--- a/index.html
+++ b/index.html
@@ -32,22 +32,22 @@
         <ul>
             <li>
                 <a href="about.html">
-                    <div class="nav-home-card-left"><p>about</p></div>
+                    <div id="card1" class="nav-home-card-left"><p>about</p></div>
                 </a>
             </li>
             <li>
                 <a href="media.html">
-                    <div class="nav-home-card-right"><p>media</p></div>
+                    <div id="card2" class="nav-home-card-right"><p>media</p></div>
                 </a>
             </li>
             <li>
                 <a href="reviews.html">
-                    <div class="nav-home-card-left"><p>reviews</p></div>
+                    <div id="card3" class="nav-home-card-left"><p>reviews</p></div>
                 </a>
             </li>
             <li>
                 <a href="contact.html">
-                    <div class="nav-home-card-right"><p>contact</p></div>
+                    <div id="card4" class="nav-home-card-right"><p>contact</p></div>
                 </a>
             </li>
         </ul>
