style about main section content to be centre aligned for screensize 600px plus.

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             </div>
             <hr>
             <div class="about-bio">
-                <div class="about-bio-left bio-pic">
+                <div id="bio-pic2" class="about-bio-left bio-pic">
                     <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
                 </div>
                 <div class="about-bio-right bio-text">
@@ -97,7 +97,7 @@
             </div>
             <hr>
             <div class="about-bio">
-                <div class="about-bio-left bio-pic">
+                <div id="bio-pic5" class="about-bio-left bio-pic">
                     <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
                 </div>
                 <div class="about-bio-right bio-text">
