--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>“Durham's no.1 function band...”  <br> - <em>The Northern Echo</em></p>
             </div>
             <div id="enter-site-button">
-                <a href="#nav-home"><i class="fa-sharp fa-solid fa-arrow-down"></i></a>
+                <a href="#nav-home"><p>Enter site  </p><i class="fa-sharp fa-solid fa-arrow-down"></i></a>
             </div>
         </div>
     </header>
