Change background color for soundcloud section on media page.

--- a/media.html
+++ b/media.html
@@ -52,10 +52,12 @@
             <!--The iframe tag below is not my own code. It is generated from Soundcloud from the following URL: 
                 https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely 
             A full description of how to access this code is included in the credits section of the readme-->
-            <div id="soundcloud-card">
-                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" style="color: #cccccc; text-decoration: none;">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" style="color: #cccccc; text-decoration: none;">Isn&#x27;t She Lovely</a></div>
+            <div id="soundcloud-section">
+                <div id="soundcloud-card">
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/425638074&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/andrew-silk-743237145" title="Andy Silk" target="_blank" style="color: #cccccc; text-decoration: none;">Andy Silk</a> · <a href="https://soundcloud.com/andrew-silk-743237145/isnt-she-lovely" title="Isn&#x27;t She Lovely" target="_blank" style="color: #cccccc; text-decoration: none;">Isn&#x27;t She Lovely</a></div>
+                </div>
+                <p>Check us out on soundcloud! Here's one of our most popular recordings. <em>Song: Isn't She Lovely by Stevie Wonder</em></p>
             </div>
-            <p>Check us out on soundcloud! Here's one of our most popular recordings. <em>Song: Isn't She Lovely by Stevie Wonder</em></p>
         </section>
         <section id="book-now">
             <p>Like what you hear?<a href="contact.html"><span>Book Us Now</span></a></p>
