--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         <p><strong>Follow us on:</strong></p>
         <ul class="social-links">
             <li>
-                <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="https://www.facebook.com/mustardcutters" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
-                <a href="https://soundcloud.com/" target="_blank" rel="noopener" aria-label="Visit our Soundcloud page (opens in a new tab)"><i class="fa-brands fa-soundcloud"></i></a>
+                <a href="https://soundcloud.com/andrew-silk-743237145/sets/human-gig" target="_blank" rel="noopener" aria-label="Visit our Soundcloud page (opens in a new tab)"><i class="fa-brands fa-soundcloud"></i></a>
             </li>
         </ul>
     </footer>
